<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/red1"
    tools:context=".Docmsg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="#fff"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/app_logo"
                android:contentDescription="@string/app_name" />

            <TextView
                android:text="@string/login_page"
                android:textColor="#000"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/sign_in_to_continue"
                android:textColor="#000"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/login_forgot_password"
                    android:text="@string/forgot_password"
                    android:textColor="#000"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/login_button"
                    android:text="@string/sign_in_now"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:background="@drawable/buttons_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/login_register_button"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:layout_marginTop="15dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>