<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red1"
    android:padding="20dp"
    android:gravity="center_vertical"
    tools:context=".SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="#fff"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/app_logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/title"
            android:text="@string/blood_donation_app"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/slogan"
            android:text="@string/donate_blood_and_save_lives"
            android:textColor="#000"
            android:textSize="20sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>